2006-01-20  Roger While <simrw@sim-basis.de>

	* parser.y, field.c : Allow duplicate paragraph names
	  scanner.l : Fix incorrect parsing

2006-01-18  Roger While <simrw@sim-basis.de>

	* parser.y : Allow EQUAL in COMPUTE, Fix OBJECT-COMPUTER

2006-01-17  Roger While <simrw@sim-basis.de>

	* cobc.c : Don't warn -x/-m when using -E
	  field.c : Don't allow binary fields > 18 digits

2006-01-08  Roger While <simrw@sim-basis.de>

	* tree.c, field.c, typeck.c : Preliminary support for numeric
	  fields with up to 36 digits

2006-01-07  Roger While <simrw@sim-basis.de>

	* cobc.c : Remove --verbose long option. getopt_long_only
	  has a problem with eg. -mv
	  Change 'Version' back to 'version'.

2006-01-05  Roger While <simrw@sim-basis.de>

	* General : Bootstrap to new libtool/automake
	  cobc.c : MS VS/VC changes
		   Get COB_LDFLAGS from config
	  tree.c : Fix invalid picture
	  codegen.c : Non-gcc and MS VS/VC fixes

2006-01-03  Roger While <simrw@sim-basis.de>

	* scanner.l : Fix wrong numeric scan

2005-12-30  Roger While <simrw@sim-basis.de>

	* Change ifdef's on MINGW to WIN32 (Also defined on 64-bit Win)

2005-12-28  Roger While <simrw@sim-basis.de>

	* General : Further fixes for non-gcc
	  codegen.c : Don't use computed goto's for non-gcc

2005-12-27  Roger While <simrw@sim-basis.de>

	* General : Change all occurrences of "char[variable]"
	  typeck.c : Fix huge literal generation
		     Hack for systems that need pointer alignment

2005-12-23  Roger While <simrw@sim-basis.de>

	* reserved.c : Use bsearch

2005-12-19  Roger While <simrw@sim-basis.de>

	* codegen.c : Fix sticky-linkage with ENTRY

2005-12-18  Roger While <simrw@sim-basis.de>

	* All : cleanup of "shadowed" variables
	  codegen.c : File struct initialization
		      Save/restore params for sticky-linkage
		      Generate Ebcdic table when needed

2005-12-13  Roger While <simrw@sim-basis.de>

	* codegen.c : sticky-linkage changes

2005-12-13  Roger While <simrw@sim-basis.de>
