@@ -35,6 +35,7 @@ CB_CONFIG_BOOLEAN (cb_larger_redefines_ok, "larger-redefines-ok")
 CB_CONFIG_BOOLEAN (cb_relaxed_syntax_check, "relaxed-syntax-check")
 CB_CONFIG_BOOLEAN (cb_perform_osvs, "perform-osvs")
 CB_CONFIG_BOOLEAN (cb_sticky_linkage, "sticky-linkage")
+CB_CONFIG_BOOLEAN (cb_relax_level_hierarchy, "relax-level-hierarchy")
 CB_CONFIG_SUPPORT (cb_author_paragraph, "author-paragraph")
 CB_CONFIG_SUPPORT (cb_memory_size_clause, "memory-size-clause")
 CB_CONFIG_SUPPORT (cb_multiple_file_tape_clause, "multiple-file-tape-clause")
