@@ -95,6 +95,10 @@ perform-osvs: no
 # Value: `yes', `no'
 sticky-linkage: no
 
+# If yes, allow non-matching level numbers
+# Value: `yes', `no'
+relax-level-hierarchy: no
+
 # not-reserved:
 # Value: Word to be taken out of the reserved words list
 # (case independent)
