@@ -1,3 +1,8 @@
+2006-01-20  Roger While <simrw@sim-basis.de>
+
+	* Add relax-level-hierarchy to default.conf
+	  Allows mismatched level numbers
+
 2005-12-18  Roger While <simrw@sim-basis.de>
 
 	* Add perform-osvs, sticky-linkage to ibm.conf, mvs.conf
